test/semantics/programs/invalid/class-without-constructor.guav
# Shouldn't pass since class doesn't have a constructor

class Person {
    Person(name = "John Doe", height = 50.0, vocabulary = []) {
        this.name = name
        this.height = height
        this.vocabulary = vocabulary
    }
}

littleGreenMan = Person("Yoda", 0.0001, ["Amazing", "Guavascript", "is!"])
